# wikiapp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yaml
docs/: Console.html  index.html  robots.txt  search.json  sitemap.xml
docs/site_libs/bootstrap/: bootstrap.min.css
notebooks/: Console.ipynb  index.qmd  nbdev.yml  settings.ini  sidebar.yml  wikipedia
tests/: conftest.py  test.wikipedia.py  test_console.py  test_wikipedia.py
wikiapp/: __init__.py  console.py  wikipedia.py
