[project]
name = "wikiapp"
version = "0.1.0"
description = "Add a short description here"
requires-python = ">= 3.10"
dependencies = []

[project.scripts]
wikiapp = "wikiapp.console:main"

[project.optional-dependencies]
test = ["coverage[toml]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", 'win-64', 'osx-64']

[tool.pixi.pypi-dependencies]
wikiapp = { path = ".", editable = true }

[tool.pixi.tasks]
program = "python wikiapp/console.py"

[tool.pixi.dependencies]

click = ">=8.1.7,<8.2"
requests = ">=2.31.0,<2.32"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<8.3"
pytest-cov = ">=5.0.0,<5.1"
pytest-mock = ">=3.14.0,<3.15"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
click = ">=8.1.3,<8.2"
requests = ">=2.23.0,<2.33"

[tool.pixi.feature.py311.dependencies]
requests = ">=2.23.0,<2.33"
python = "3.11.*"
click = ">=8.1.3,<8.2"

[tool.pixi.environments]
default = {solve-group = "default"}
test = { features = ["test"], solve-group = "default" }
py310test = { features = ["test", "py310"], solve-group = "py310" }
py311test = { features = ["test", "py311"], solve-group = "py311" }

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/test"
